gitops/kafka/components/kafdrop/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafdrop
  labels:
    app.kubernetes.io/name: kafdrop
    app.kubernetes.io/instance: kafdrop
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kafdrop
      app.kubernetes.io/instance: kafdrop
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kafdrop
        app.kubernetes.io/instance: kafdrop
      annotations:
    spec:
      containers:
        - name: kafdrop
          image: "obsidiandynamics/kafdrop:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 9000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: "/actuator/health"
              port: http
            initialDelaySeconds: 180
            periodSeconds: 30
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: "/actuator/health"
              port: http
            initialDelaySeconds: 20
            periodSeconds: 5
            timeoutSeconds: 10
          resources:
            requests:
              cpu: 1m
              memory: 128Mi
