gitops/kafka/components/kafdrop/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kafdrop
  labels:
    app.kubernetes.io/name: kafdrop
    app.kubernetes.io/instance: kafdrop
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: kafdrop
    app.kubernetes.io/instance: kafdrop
