gitops/kafka/components/kafdrop/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kafdrop
spec:
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: kafdrop
